edit: solved Waveform problem, by having it visible after hovering

--- a/node_app/client/public/css/spectrogram.css
+++ b/node_app/client/public/css/spectrogram.css
@@ -31,7 +31,9 @@
     margin: 2em 0em;
     border-radius: 25px;
     box-sizing: content-box;
+    z-index: 0;
 }
+
 
 #resultWaveform {
     background-color: white;
@@ -43,10 +45,33 @@
     box-sizing: content-box;
 }
 
-section img{
-    width: 5em;
+#incomingSpectrogram, #resultSpectrogram{
+    width: 100%;
+    background-size: contain;
+    height: 80%;
+    margin: 2em 0em;
+    border-radius: 25px;
+    box-sizing: content-box;
+    visibility: hidden;
+    position: absolute;
+    z-index: 3;
+    margin-top: 0em;
+}
+
+#incomingWaveform:hover #incomingSpectrogram, #resultWaveform:hover #resultSpectrogram{
+    visibility: visible;
+}
+
+
+
+
+#spectrogram-loading img{
+    width: 4em;
     margin: 0em 5em;
-    margin-top: 8em;
+}
+
+#spectrogram-loading{
+    margin-top: 8.5em;
 }
 
 a{
@@ -64,20 +89,23 @@ span img {
     margin: 1em;
     display: flex;
     justify-content: space-around;
-    width: 50%;
+    width: 33%
 }
 
 #thx p {
     font-size: large;
 }
 
+
+
+
 @media (max-width: 1200px) {
 
-    #incomingWaveform, #waveform{
+    #incomingWaveform, #resultWaveform{
         width: 100%;
-        height: 60%;
+        height: 80%
     }
-    section img{
+    #spectrogram-loading img{
         width: 3em;
         margin: 0em 2em;
         margin-top: 7em;
@@ -87,9 +115,7 @@ span img {
         width: 15em;
     }
 
-    #thx{
-        width: 80%;
-    }
+    
 
     h2:nth-child(1){
         margin-top: 0em;
@@ -98,50 +124,58 @@ span img {
 
 @media (max-width: 900px) {
 
-    h2{
-        margin-top: 8em;
-        margin-bottom: 6em;
+    .canvas  {
+        height: 150vh;
     }
 
-    #sec1, #sec2{
+    #spectrogram-loading{
+        margin-top: 0em;
+    }
+
+    #results{
+        margin-top: 8em;
+        margin-bottom: 8em;
+    }
+
+    #spectrogram-input, #spectrogram-output{
         display: flex;
         flex-direction: column;
         align-items: center;
+        height: 80%;
     }
 
     .spectrogram{
         flex-direction: column;
         align-items: center;
-        width: 120%;
     }
-    section img{
-        width: 3em;
-        margin-top: 8em;
-        margin-bottom: 4em;
+    #spectrogram-loading img{
+        width: 2em;
+        margin: 2em 0em;
     }
 
-    #incomingWaveform, #waveform{
-        width: 120%;
-        height: 80%;
+    #incomingWaveform, #resultWaveform{
+        width: 100%;
+        height: 400px;
     }
 
-    
-    #sec1{
-        margin-top: 5em;
-    }
 
-    h2:nth-child(1){
-        margin-top: 6em;
+    #thankyou{
+        margin-top: 2em;
     }
 
     #thx{
-        flex-direction: column;
-        align-items: center;
+        width: 33%;
     }
 
     span img {
-        margin:2em;
         margin-top: 0.5em;
-        width: 2.5em;
+        width: 1em;
+    }
+}
+
+
+@media (max-width: 900px) {
+    #thx{
+        width: 45%;
     }
 }
